--- a/Curriculum/Curriculum/Storyboards/Base.lproj/Home.storyboard
+++ b/Curriculum/Curriculum/Storyboards/Base.lproj/Home.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="6Nq-qh-QNT">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="6Nq-qh-QNT">
     <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -64,13 +64,6 @@
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nvK-ew-D3A">
-                                                <rect key="frame" x="8" y="118" width="176" height="30"/>
-                                                <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                                <state key="normal" title="WebSite">
-                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                </state>
-                                            </button>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Position" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pGa-Eu-fQJ">
                                                 <rect key="frame" x="8" y="35.5" width="176" height="19.5"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
@@ -89,6 +82,13 @@
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nvK-ew-D3A">
+                                                <rect key="frame" x="8" y="118" width="176" height="30"/>
+                                                <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <state key="normal" title="WebSite">
+                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                </state>
+                                            </button>
                                         </subviews>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
@@ -160,6 +160,13 @@
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <inset key="separatorInset" minX="8" minY="0.0" maxX="8" maxY="0.0"/>
                             </tableView>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="cBZ-wn-qWb">
+                                <rect key="frame" x="145" y="269" width="30" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="cBZ-wn-qWb" secondAttribute="height" multiplier="1:1" id="JrP-tf-lEi"/>
+                                    <constraint firstAttribute="height" constant="30" id="Trn-re-7Ly"/>
+                                </constraints>
+                            </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
@@ -167,6 +174,7 @@
                             <constraint firstItem="153-b7-ldC" firstAttribute="leading" secondItem="PfC-Ee-G0C" secondAttribute="leading" id="1Ur-dY-d4E"/>
                             <constraint firstItem="153-b7-ldC" firstAttribute="top" secondItem="Kl3-gt-zUT" secondAttribute="bottom" id="1Xm-i7-8Ie"/>
                             <constraint firstItem="Kl3-gt-zUT" firstAttribute="leading" secondItem="PfC-Ee-G0C" secondAttribute="leading" id="5bp-EY-kOh"/>
+                            <constraint firstItem="cBZ-wn-qWb" firstAttribute="centerX" secondItem="GP9-U9-R54" secondAttribute="centerX" id="D8m-TD-esh"/>
                             <constraint firstItem="ofv-0F-eld" firstAttribute="leading" secondItem="PfC-Ee-G0C" secondAttribute="leading" id="LBf-fs-ZaK"/>
                             <constraint firstItem="153-b7-ldC" firstAttribute="trailing" secondItem="PfC-Ee-G0C" secondAttribute="trailing" id="OaX-dL-LCj"/>
                             <constraint firstItem="Kl3-gt-zUT" firstAttribute="top" secondItem="PfC-Ee-G0C" secondAttribute="top" id="Xxt-1y-1cl"/>
@@ -176,9 +184,24 @@
                             <constraint firstItem="Kl3-gt-zUT" firstAttribute="height" secondItem="GP9-U9-R54" secondAttribute="height" multiplier="1:20" id="nIv-mo-tkM"/>
                             <constraint firstItem="ofv-0F-eld" firstAttribute="top" secondItem="153-b7-ldC" secondAttribute="bottom" id="r83-1B-Mir"/>
                             <constraint firstItem="Kl3-gt-zUT" firstAttribute="trailing" secondItem="PfC-Ee-G0C" secondAttribute="trailing" id="s0y-BF-KPE"/>
+                            <constraint firstItem="cBZ-wn-qWb" firstAttribute="centerY" secondItem="GP9-U9-R54" secondAttribute="centerY" id="yWV-hB-95H"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="PfC-Ee-G0C"/>
                     </view>
+                    <connections>
+                        <outlet property="aboutMeLbl" destination="3Ld-Rb-QjY" id="Jbe-kc-IUT"/>
+                        <outlet property="activityIndicator" destination="cBZ-wn-qWb" id="fSS-9A-i1b"/>
+                        <outlet property="cellPhoneLbl" destination="u40-0U-B1J" id="O3b-cl-xql"/>
+                        <outlet property="emailLbl" destination="i8B-Pf-o8X" id="ofJ-FW-IhL"/>
+                        <outlet property="fullNameLbl" destination="5bz-XP-yNZ" id="6ci-bM-K4Y"/>
+                        <outlet property="imageView" destination="Vit-xD-aVQ" id="Lxp-AZ-saq"/>
+                        <outlet property="positionLbl" destination="pGa-Eu-fQJ" id="bql-mL-VEf"/>
+                        <outlet property="projectsLbl" destination="Owx-kx-j1J" id="3Mn-Gd-MmN"/>
+                        <outlet property="releasesLbl" destination="9Kc-0Z-g7o" id="bjr-tf-mB2"/>
+                        <outlet property="tableView" destination="ofv-0F-eld" id="Uem-nY-dyW"/>
+                        <outlet property="titleLbl" destination="bc4-GI-lKV" id="c5g-Xj-3Og"/>
+                        <outlet property="webSiteBtn" destination="nvK-ew-D3A" id="Zck-bm-0iN"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2Ie-Qe-JWT" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
